<resources>
    <string name="app_name">MotionSensorApp</string>
    <string name="welcome">Welcome</string>
    <string name="report">Click to view Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reports">Reports</string>
    <string name="front_door">Device Name</string>
    <string name="bedroom">Master\nBedroom</string>
    <string name="back_door">Back Door</string>
    <string name="number">Number Of times</string>
    <string name="master_bed">Master Bedroom</string>
    <string name="graph"><u>Graph</u></string>
    <string name="past_24h">Past 24H</string>
    <string name="number_of_times">Number of times</string>
</resources>
